--- a/web/themes/custom/giv_din_stemme_theme/texts/terms-text.html
+++ b/web/themes/custom/giv_din_stemme_theme/texts/terms-text.html
@@ -1,79 +1,18 @@
-Vilkår for donation af din stemme 
+<h1>Persondatapolitik</h1>
 
-Ved donation af din stemme skal vi informere dig om de vilkår der er gældende.  
-
-Donationen vil bidrage til at få bygget en open source-stemmedatabase som vil kunne benyttes til fx at værktøjer og it-løsninger kan lære at forstå dialekter og udtale gennem talegenkendelse.  Stemmedatabasen vil blive gjort tilgængelig via xxxx. Det betyder at offentligheden vil kunne benytte optagelserne efter de betingelser som fremgår i licensaftalen med tredjepart. Link til licensaftalen 
-
-For at donere skal du være over 15 år og acceptere de betingelser som er beskrevet her. 
-
-Betingelser 
-
-Det er frivilligt at deltage i initiativet.  
-
-På optagelserne er det kun din stemme som må kunne høres.  
-
-Du må ikke indtale følsomme eller personlige data om dig selv eller andre.  
-
-Optagelserne må ikke bidrage med at krænke en tredjeparts rettigheder. 
-
-Du vil give afkald på dine ophavsrettigheder til optagelserne. 
-
-Du giver xxxx den nødvendige tilladelse til at indsamle, opbevare og offentliggøre dine bidrag. 
-
-Brugerkonto 
-
-Ud over optagelserne (din stemme) indgår der ikke persondata i din donation. De personoplysninger du indtaster efter login med MitID vil ikke blive gemt. E-mailadresse vil kun blive gemt hvis du vælger at deltage i konkurrencen.  
-
-Du behøver ikke at oprette en konto for at lave optagelserne. 
-
-Ansvarsfraskrivelse 
-
-Ved at deltage i Common Voice accepterer du, at Mozilla ikke på nogen måde er ansvarlig for manglende evne til at bruge Common Voice eller for ethvert krav, der opstår som følge af disse vilkår. Mozilla fraskriver sig specifikt følgende: 
-
-Indirekte, særlige, tilfældige, følgeskader eller eksemplariske skader, herunder uden begrænsning direkte eller indirekte skader for tab af goodwill, arbejdsstandsning, tabt fortjeneste, tab af data eller computerfejl. 
-
-Ethvert ansvar for Mozilla i henhold til disse vilkår er begrænset til $500. 
-
-Du accepterer at holde Mozilla skadesløs for ethvert ansvar eller krav, der følger af din deltagelse i Common Voice. 
-
-Mozilla leverer Common Voice "som den er". Mozilla fraskriver sig specifikt enhver juridisk garanti eller garanti såsom "sælgbarhed", "egnethed til et bestemt formål", "ikke-krænkelse" og garantier, der opstår som følge af en handel, brug eller handel. 
-
-Krænkelse og kontaktinformation 
-
-Hvis du mener, at noget i Common Voice krænker din ophavsret eller varemærkerettigheder, skal du se vores politik for, hvordan du rapporterer krænkelse. 
-
-
-Opdateringer af vilkår 
-
-Xxxx kan efter behov opdatere vilkår og bestemmelser. De opdaterede vilkår vil blive offentliggjort online.  
-
-Hvis du fortsætter med at bruge Common Voice, efter at vi har offentliggjort opdaterede vilkår, accepterer du, at dette udgør din accept af sådanne ændringer. Vi vil offentliggøre en ikrafttrædelsesdato øverst på denne side for at gøre det klart, hvornår vi lavede vores seneste opdatering. 
-
-Opsigelse 
-
-Mozilla kan suspendere eller afslutte enhvers adgang til Common Voice til enhver tid af enhver grund. Hvis vi beslutter at suspendere eller afslutte din adgang, vil vi forsøge at give dig besked via den e-mailadresse, der er knyttet til din konto, eller næste gang du forsøger at få adgang til Common Voice. 
-
-De bidrag, du indsender til Mozilla, forbliver offentligt tilgængelige som en del af Common Voice, selvom vi afslutter eller suspenderer din adgang. 
-
-Gældende lov 
-
-Californiens lov gælder for disse vilkår. Disse vilkår er hele aftalen mellem dig og Mozilla vedrørende Common Voice. 
-
-Persondatapolitik 
-
-Jf. Persondataforordningen skal vi oplyse dig om hvordan vi behandler dine personoplysninger. De oplysninger vi behandler om dig er navn, postnummer ift. oprindelsesegn, fødselsår, køn, dialekt og optagelser af din stemme. Det gør vi for at kunne for at kunne etablere et taledatasæt, der bliver frit tilgængelig for alle og kan bruges til at udvikle bedre taleteknologi på dansk. Det er en betingelse at tredjeparter som benytter datasættene efterlever licensaftale. Se nærmere under Vilkår for donation af din stemme 
+Jf. Persondataforordningen skal vi oplyse dig om hvordan vi behandler dine personoplysninger. De oplysninger vi behandler om dig er postnummer ift. oprindelsesegn, fødselsår, køn, dialekt og optagelser af din stemme. Det gør vi for at kunne for at kunne etablere et taledatasæt, der bliver frit tilgængelig for alle og kan bruges til at udvikle bedre talegenkendelsesteknologi på dansk. Det er en betingelse at tredjeparter som benytter datasættene efterlever licensaftale. Se nærmere under Vilkår for donation af din stemme 
 
 Optagelser af din stemme bliver en del af et samlet taledatasæt, der bliver frit tilgængelig for alle. 
 
 Brugen af optagelserne er via en licensaftale med tredjepart sikret mod misbrug og er begrænset til ikke at må benyttes til: 
 
-skabelse af syntetisk tale 
+<li> skabelse af syntetisk tale </li>
 
-at tilknytte stemmen til anden person eller digital enhed med henblik på at efterligne eller at udgive sig for at være en anden person  
+<li> at tilknytte stemmen til anden person eller digital enhed med henblik på at efterligne eller at udgive sig for at være en anden person  </li>
 
-at udlede træk fra fx dialekter, alder eller tilsvarende for at misbruge optagelserne eller stille egnsområder eller alder på personer i dårligt lys.  
+<li>at udlede træk fra fx dialekter, alder eller tilsvarende for at misbruge optagelserne eller stille egnsområder eller alder på personer i dårligt lys.  </li>
 
-Hvis du vælger at deltage i konkurrencen om xxxx, vil din e-mailadresse kun blive benyttet til kontakte dig for at kunne udlevere præmien. 
+Hvis du vælger at deltage i konkurrencen om xxxx, vil din e-mailadresse kun blive benyttet til kontakte dig for at kunne udlevere præmien.  
 
 Vores behandling af personoplysningerne sker på baggrund af Kommunalfuldmagtsreglerne, hvor en borger kan give vederlagsfrie bidrag til en kommune i form at en donation.  
 
@@ -84,5 +23,3 @@ E-mail og navn vil blive slettet efter konkurrencens udløb fredag den 6. septem
 Den dataansvarlige er Aarhus Kommune, Magistratsafdelingen for Kultur og Borgerservice, Hack Kampmanns Plads 2, 8000 Aarhus C, som kan kontaktes på info@opendata.dk Har du spørgsmål i forbindelse med Aarhus Kommunes databeskyttelse af dine oplysninger, så kan du også kontakte Aarhus Kommunes databeskyttelsesrådgiver på mail databeskyttelsesraadgiver@aarhus.dk. 
 
 Du skal slutteligt vide at det er muligt at klage til Datatilsynet over behandlingen af personoplysningerne. 
-
-  
