2160: Apply assets coding standards

--- a/web/themes/custom/giv_din_stemme_theme/texts/ready-to-donate-text.html
+++ b/web/themes/custom/giv_din_stemme_theme/texts/ready-to-donate-text.html
@@ -1,8 +1,13 @@
 <p>Nu er du klar til at donere din stemme.</p>
-<br>
+<br />
 <p>Du vil blive præsenteret for en udvalgt tekst som du skal læse op.</p>
-<br>
-<p>Den bliver vist lidt ad gangen, så du har mulighed for at holde pause eller stoppe undervejs.</p>
-<br>
-<p>Du er oprettet i systemet så du altid kan vende tilbage og fortsætte på et andet tidspunkt.</p>
-
+<br />
+<p>
+  Den bliver vist lidt ad gangen, så du har mulighed for at holde pause eller
+  stoppe undervejs.
+</p>
+<br />
+<p>
+  Du er oprettet i systemet så du altid kan vende tilbage og fortsætte på et
+  andet tidspunkt.
+</p>
