Applied coding standards

--- a/web/themes/custom/giv_din_stemme_theme/texts/thank-you-for-the-donation-text.html
+++ b/web/themes/custom/giv_din_stemme_theme/texts/thank-you-for-the-donation-text.html
@@ -1,5 +1,6 @@
 <strong>Tak for din donation</strong>
 <p>
-  Vivamus est massa, placerat in interdum sed, fermentum non velit. Maecenas eleifend, orci a finibus mattis, quam
-  augue cursus diam, quis rutrum urna risus at urna. Duis ornare scelerisque enim, in gravida nisi pellentesque in.
+  Vivamus est massa, placerat in interdum sed, fermentum non velit. Maecenas
+  eleifend, orci a finibus mattis, quam augue cursus diam, quis rutrum urna
+  risus at urna. Duis ornare scelerisque enim, in gravida nisi pellentesque in.
 </p>
