--- a/web/themes/custom/giv_din_stemme_theme/texts/consent-text.html
+++ b/web/themes/custom/giv_din_stemme_theme/texts/consent-text.html
@@ -1,21 +1,21 @@
-<h1>Vilkår for donation af din stemme</h1>
+<h1>Vilkår for donation af din stemme </h1>
+<p>
+Ved donation af din stemme skal vi informere dig om de vilkår der er gældende. 
+Donationen vil bidrage til at få bygget en open source-stemmedatabase som fx vil kunne benyttes til at værktøjer og digitale løsninger kan lære at forstå det danske sprogs dialekter og udtale gennem talegenkendelse. Stemmedatabasen vil blive gjort tilgængelig via opendata.dk. Det betyder, at offentligheden vil kunne benytte optagelserne efter de betingelser som fremgår i licensaftalen med tredjepart. Link til licensaftalen
+For at donere skal du være over 15 år og acceptere de betingelser som er beskrevet her.
+</p>
 
-Ved donation af din stemme skal vi informere dig om de vilkår der er gældende.
-Donationen vil bidrage til at få bygget en open source-stemmedatabase som vil
-kunne benyttes til fx at værktøjer og it-løsninger kan lære at forstå dialekter
-og udtale gennem talegenkendelse. Stemmedatabasen vil blive gjort tilgængelig
-via open data dk. Det betyder at offentligheden vil kunne benytte optagelserne
-efter de betingelser som fremgår i licensaftalen med tredjepart. Licens aftalen
-kan findes her: <a href="">donerdinstemme.dk/licens</a>
 
+<a href="https://donerdinstemme.dk/licens">donerdinstemme.dk/licens</a>
+<p>
 For at donere skal du være over 15 år og acceptere de betingelser som er
-beskrevet her.
+beskrevet her. </p>
 
-<b>Betingelser for brug af donationen </b>
+<h2>Betingelser for brug af donationen </h2>
 
-Brugen af optagelserne er via en licensaftale med tredjepart sikret mod misbrug
-og er begrænset til ikke at må benyttes til:
-
+<p>Brugen af optagelserne er via en licensaftale med tredjepart sikret mod misbrug
+og er begrænset til ikke at må benyttes til: </p>
+<ul>
 <li>skabelse af syntetisk tale</li>
 
 <li>
@@ -27,26 +27,26 @@ og er begrænset til ikke at må benyttes til:
   at udlede træk fra fx dialekter, alder eller tilsvarende for at misbruge
   optagelserne
 </li>
-
-<b>Betingelser for donation </b>
-
+</ul>
+<h2>Betingelser for donation </h2>
+<p>
 Det er frivilligt at deltage i initiativet. På optagelserne er det kun din
 stemme som må kunne høres. Du må ikke indtale følsomme eller personlige data om
 dig selv eller andre. Optagelserne må ikke bidrage med at krænke en tredjeparts
 rettigheder. Du vil give afkald på dine ophavsrettigheder til optagelserne. Du
 giver Open Data DK den nødvendige tilladelse til at indsamle, opbevare og
 offentliggøre dine bidrag.
+</p>
+<h2>Brugerkonto </h2>
 
-<b>Brugerkonto </b>
-
-Ud over optagelserne (din stemme) indgår der ikke persondata i din donation. De
+<p>Ud over optagelserne (din stemme) indgår der ikke persondata i din donation. De
 personoplysninger du indtaster efter login med MitID vil ikke blive gemt.
 E-mailadresse vil kun blive gemt hvis du vælger at deltage i konkurrencen. Du
-behøver ikke at oprette en konto for at lave optagelserne.
+behøver ikke at oprette en konto for at lave optagelserne.</p>
 
-<b>Ansvarsfraskrivelse</b>
+<h2>Ansvarsfraskrivelse</h2>
 
-Ved at deltage i Doner din stemme accepterer du, at Open Data DK ikke på nogen
+<p>Ved at deltage i Doner din stemme accepterer du, at Open Data DK ikke på nogen
 måde er ansvarlig for manglende evne til at bruge Doner din stemme eller for
 ethvert krav, der opstår som følge af disse vilkår. Open Data DK fraskriver sig
 specifikt følgende: Indirekte, særlige, tilfældige, følgeskader eller
@@ -58,34 +58,34 @@ krav, der følger af din deltagelse i Doner din stemme. Open Data DK leverer
 Doner din stemme "som den er". Open Data DK fraskriver sig specifikt enhver
 juridisk garanti eller garanti såsom "sælgbarhed", "egnethed til et bestemt
 formål", "ikke-krænkelse" og garantier, der opstår som følge af en handel, brug
-eller handel.
+eller handel.</p>
 
-<b>Krænkelse og kontaktinformation</b>
+<h2>Krænkelse og kontaktinformation</h2>
 
-Hvis du mener, at noget i Common Voice krænker din ophavsret eller
+<p>Hvis du mener, at noget i Common Voice krænker din ophavsret eller
 varemærkerettigheder, skal du se vores politik for, hvordan du rapporterer
-krænkelse.
+krænkelse.</p>
 
-<b>Opdateringer af vilkår </b>
+<h2>Opdateringer af vilkår </h2>
 
-Open Data DK kan efter behov opdatere vilkår og bestemmelser. De opdaterede
+<p>Open Data DK kan efter behov opdatere vilkår og bestemmelser. De opdaterede
 vilkår vil blive offentliggjort online. Hvis du fortsætter med at bruge Doner
 din stemme, efter at vi har offentliggjort opdaterede vilkår, accepterer du, at
 dette udgør din accept af sådanne ændringer. Vi vil offentliggøre en
 ikrafttrædelsesdato øverst på denne side for at gøre det klart, hvornår vi
-lavede vores seneste opdatering.
+lavede vores seneste opdatering. </p>
 
-<b>Opsigelse </b>
+<h2>Opsigelse </h2>
 
-Open Data DK kan suspendere eller afslutte enhvers adgang til Doner din stemme
+<p>Open Data DK kan suspendere eller afslutte enhvers adgang til Doner din stemme
 til enhver tid af enhver grund. Hvis vi beslutter at suspendere eller afslutte
 din adgang, vil vi forsøge at give dig besked via den e-mailadresse, der er
 knyttet til din konto, eller næste gang du forsøger at få adgang til Common
 Voice. De bidrag, du indsender til Open Data DK, forbliver offentligt
 tilgængelige som en del af Open Data DK, selvom vi afslutter eller suspenderer
-din adgang.
+din adgang.</p>
 
-<b>Gældende lov </b>
+<h2>Gældende lov </h2>
 
-Californiens lov gælder for disse vilkår. Disse vilkår er hele aftalen mellem
-dig og Mozilla vedrørende Common Voice.
+<p>Danmarks love gælder for disse vilkår. Disse vilkår er hele aftalen mellem
+dig og Open Data DK vedr. Doner din stemme.</p>
